--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yannis Todo's</title>
+    <script type="module" src="js/index.js" defer  ></script>
     <link rel="stylesheet" href="scss/styles.scss">
-    <script src="js/index.js" defer></script>
 </head>
 <body>
     <div id="app">
