updates of my todo app

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
     <div id="app">
         
     </div>
+    <script src="https://kit.fontawesome.com/30238e7ac9.js" crossorigin="anonymous"></script>
 </body>
 </html>
